# mlx_fun

./: .gitignore  CLAUDE.md  README.md  explain_merge_modes.py  filtered_experts.csv  pyproject.toml  run.sh  run_mlx.sh  test_merge_modes.py
docs/: convert-nvfp4.md
plans/: expert_list_export_plan.md  file_selection_refactor_plan.md  frontend_enhancements_plan.md  guard_experts_feature_plan.md  ignore_experts_plan.md  model_wide_prune_merge_plan.md  rank_based_merge_plan.md
scripts/: prepare_dataset.py
src/mlx_fun/: __init__.py  abliterate.py  api_compat.py  cli.py  convert_nvfp4.py  data.py  dflash_draft.py  domain.py  frontend.py  hidden_state_capture.py  kv_compress.py  merger.py  observer.py  pruner.py  ream_hooks.py  rotor_quant.py  safety.py  saliency.py  save.py  server.py  speculative.py  stats_ops.py  steering.py  stream_pruner.py
src/mlx_fun/adapters/: __init__.py  base.py  gemma4.py  glm4_moe.py  glm4_moe_lite.py  glm_moe_dsa.py  minimax.py  nemotron_h.py  qwen3_moe.py
src/mlx_fun/benchmarks/: __init__.py  run_dflash.py
src/mlx_fun/templates/: gemma.jinja  glm51.jinja  iquest.jinja  minimax.jinja
tests/: conftest.py  test_abliterate.py  test_adapter.py  test_api_compat.py  test_cli.py  test_convert_nvfp4.py  test_data.py  test_dflash_draft.py  test_domain.py  test_frontend.py  test_hidden_state_capture.py  test_kv_compress.py  test_merger.py  test_observer.py  test_pruner.py  test_ream_hooks.py  test_rotor_quant.py  test_safety.py  test_saliency.py  test_server.py  test_speculative.py  test_stats_ops.py  test_steering.py
