[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-fun"
version = "0.1.0"
description = "MLX-native toolkit for MoE model compression, analysis, and domain specialization on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.30.0",
    "mlx-lm>=0.30.7",
    "click>=8.0",
    "tqdm>=4.60",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
dataset = ["datasets>=2.14", "huggingface-hub>=0.20"]
ream = ["scipy>=1.10"]
ui = ["gradio>=4.0", "matplotlib>=3.7", "requests>=2.28"]

[project.scripts]
mlx-fun = "mlx_fun.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore SWIG-related deprecation warnings from dependencies
    "ignore::DeprecationWarning:",
]
